--- a/src/main/resources/templates/updateResult.html
+++ b/src/main/resources/templates/updateResult.html
@@ -4,15 +4,17 @@
 	layout:decorate="~{common/base}">
 <head>
 <meta http-equiv="Content-Type" content="text/html; " charset="UTF-8">
-<title>メニュー画面</title>
+<script type="text/javascript" th:src="@{webjars/jquery/3.5.0/jquery.min.js}"></script>
+<script type="text/javascript" th:src="@{/js/search.js}"></script>
+<title>検索画面</title>
 </head>
 <body>
 	<div layout:fragment="content">
+		<p>更新完了</p>
+	</div>
+	<div layout:fragment="footer">
 		<p>
-			<a th:href="@{/search}">検索</a>
-		</p>
-		<p>
-			<a th:href="@{/register}">登録</a>
+			<a th:href="@{/}">HOME</a>
 		</p>
 	</div>
 </body>
