--- a/src/main/resources/templates/update.html
+++ b/src/main/resources/templates/update.html
@@ -9,35 +9,30 @@
 </head>
 <body>
 	<div layout:fragment="content">
-		<form id="update" th:action="@{/updateResult}" method="POST" th:object="${updateForm}">
-				<input type="hidden" name="old_id" th:value="${old_id}">
-				<input type="hidden" name="old_name" th:value="${old_name}">
-				<input type="hidden" name="old_birthdate" th:value="${old_birthdate}">
-				<input type="hidden" name="old_division" th:value="${old_division}">
+		<form id="update" th:action="@{/updateResult}" method="POST" th:object="${updateForms}">
 			<table>
 				<tr>
 					<td th:text="社員番号："></td>
-					<td><input type="text" th:field="*{id}"></td>
-					<td th:if="${#fields.hasErrors('id')}" th:errors="*{id}"></td>
+					<td><input type="text" name="updateForms[1].id" th:value="*{updateForms[0].id}"></td>
+					<td><input type="hidden" th:field="*{updateForms[0].id}"></td>
+					<td th:if="${#fields.hasErrors('updateForms[1].id')}" th:errors="*{updateForms[1].id}"></td>
 				</tr>
 				<tr>
 					<td th:text="氏名："></td>
-					<td><input type="text" th:field="*{name}"></td>
-					<td th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></td>
+					<td><input type="text" name="updateForms[1].name" th:value="*{updateForms[0].name}"></td>
+					<td><input type="hidden" th:field="*{updateForms[0].name}"></td>
+					<td th:if="${#fields.hasErrors('updateForms[1].name')}" th:errors="*{updateForms[1].name}"></td>
 				</tr>
 				<tr>
 					<td th:text="生年月日："></td>
-					<td><input type="text" th:field="*{birthdate}"></td>
-					<td th:if="${#fields.hasErrors('birthdate')}" th:errors="*{birthdate}"></td>
+					<td><input type="text" name="updateForms[1].birthdate" th:value="*{updateForms[0].birthdate}"></td>
+					<td><input type="hidden" th:field="*{updateForms[0].birthdate}"></td>
+					<td th:if="${#fields.hasErrors('updateForms[1].birthdate')}" th:errors="*{updateForms[1].birthdate}"></td>
 				</tr>
 				<tr>
 					<td th:text="部署："></td>
-					<td><input type="text" th:field="*{division}"></td>
-				</tr>
-				<tr>
-					<td th:text="あ："></td>
-					<td><input type="text" th:field="*{a['old']}"></td>
-					<td><input type="text" th:field="*{a['new']}"></td>
+					<td><input type="text" name="updateForms[1].division" th:value="*{updateForms[0].division}"></td>
+					<td><input type="hidden" th:field="*{updateForms[0].division}"></td>
 				</tr>
 				<tr>
 					<td><input type="submit" value="更新"></td>
