--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,7 +7,7 @@
 	<title>メニュー画面</title>
 </head>
 <body>
-	<header class="header">
+	<header>
 			<p class="header-title">メニュー画面</p>
 			<a th:href="@{/logout}">
 				<button class="logout-button" type="button">ログアウト</button>
