--- a/src/main/resources/templates/updateResult.html
+++ b/src/main/resources/templates/updateResult.html
@@ -7,7 +7,7 @@
 	<title>更新結果画面</title>
 </head>
 <body>
-	<header>
+	<header class="header">
 		<p class="header-title">更新結果画面</p>
 		<a th:href="@{/logout}">
 			<button class="logout-button" type="button">ログアウト</button>
